Add SVG icons for night weather conditions and create weather forecast HTML page
- Added SVG files for night weather icons (night\41.svg to night\9.svg).
- Created a new HTML page (weather.html) for displaying a 36-hour weather forecast.
- Integrated Bootstrap 5 and DataTables for responsive design and table functionality.
- Implemented AJAX call to fetch weather data and dynamically populate the table with weather information.
- Included logic to determine day/night icons based on forecast start times.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-# 避免把機敏資訊（API 金鑰等）提交到 GitHub
+# 本機金鑰與設定（請勿提交）
+config.local.js
+pw.js
+
+# 常見忽略
+node_modules/
+dist/
+.DS_Store
+Thumbs.db# 避免把機敏資訊（API 金鑰等）提交到 GitHub
 config.local.js
 api.md
 # 常見環境變數檔
